--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Saarinenkoti – Marble Ring</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
-  html, body { width: 100%; height: 100%; overflow: hidden; background: #111; }
-  canvas { display: block; cursor: grab; }
+  html, body { width: 100%; height: 100%; overflow: hidden; background: #111; touch-action: none; }
+  canvas { display: block; cursor: grab; touch-action: none; }
   canvas:active { cursor: grabbing; }
   #info {
     position: fixed; left: 50%; transform: translateX(-50%);
@@ -33,6 +33,19 @@
     position: fixed; left: 50%; transform: translateX(-50%);
     pointer-events: none; z-index: 10;
   }
+  #refreshBtn {
+    position: fixed; top: 14px; right: 14px; z-index: 20;
+    width: 44px; height: 44px; border-radius: 50%;
+    background: rgba(0,0,0,0.45); border: 2px solid rgba(255,255,255,0.25);
+    color: rgba(255,255,255,0.8); font-size: 20px;
+    display: flex; align-items: center; justify-content: center;
+    cursor: pointer; backdrop-filter: blur(6px); -webkit-backdrop-filter: blur(6px);
+    transition: transform 0.4s ease, background 0.2s ease;
+    padding: 0; line-height: 1;
+  }
+  #refreshBtn:hover { background: rgba(0,0,0,0.65); }
+  #refreshBtn:active { transform: rotate(360deg) scale(0.9); }
+  #refreshBtn svg { width: 22px; height: 22px; fill: none; stroke: rgba(255,255,255,0.85); stroke-width: 2.2; stroke-linecap: round; stroke-linejoin: round; }
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&family=Rubik+Spray+Paint&family=Emblema+One&display=swap" rel="stylesheet">
@@ -40,7 +53,8 @@
 <body>
 <canvas id="c"></canvas>
 <canvas id="graffiti"></canvas>
-<div id="info">click &amp; drag a marble to shoot it</div>
+<button id="refreshBtn" aria-label="Refresh"><svg viewBox="0 0 24 24"><path d="M21 2v6h-6"/><path d="M3 12a9 9 0 0 1 15-6.7L21 8"/><path d="M3 22v-6h6"/><path d="M21 12a9 9 0 0 1-15 6.7L3 16"/></svg></button>
+<div id="info">drag a marble to shoot it</div>
 <script>
 
 // ─── 3D Graffiti Title Renderer ───
@@ -130,10 +144,18 @@ function drawGraffitiTitle() {
 const canvas = document.getElementById('c');
 const ctx = canvas.getContext('2d');
 let W, H, ringCx, ringCy, ringR;
-const BALL_COUNT = 20;
 const FRICTION = 0.997;
 const RESTITUTION = 0.85;
 const MIN_R = 18, MAX_R = 28;
+const MAX_FILL = 0.30; // marbles fill at most 30% of ring area (70% empty)
+
+function calcMarbleCount() {
+  const ringArea = Math.PI * ringR * ringR;
+  const avgR = (MIN_R + MAX_R) / 2;
+  const avgBallArea = Math.PI * avgR * avgR;
+  const maxBalls = Math.floor((ringArea * MAX_FILL) / avgBallArea);
+  return Math.max(5, Math.min(maxBalls, 30));
+}
 
 function resize() {
   W = canvas.width = window.innerWidth;
@@ -162,7 +184,7 @@ function positionUI() {
   const infoTop = ringOuterBot + Math.max(4, (botGap - infoH) / 2);
   iEl.style.top = infoTop + 'px';
 }
-window.addEventListener('resize', () => { resize(); generateBackground(); generateRingPattern(); drawGraffitiTitle(); positionUI(); });
+window.addEventListener('resize', () => { resize(); generateBackground(); generateRingPattern(); initMarbles(); drawGraffitiTitle(); positionUI(); });
 resize();
 
 // ─── Random helpers ───
@@ -443,19 +465,35 @@ function createMarble(index) {
 }
 
 let marbles = [];
-for (let i = 0; i < BALL_COUNT; i++) marbles.push(createMarble(i));
+function initMarbles() {
+  marbles = [];
+  const count = calcMarbleCount();
+  for (let i = 0; i < count; i++) marbles.push(createMarble(i));
+}
+initMarbles();
 
-// ─── Interaction ───
+// ─── Interaction (touch + mouse) ───
 let dragging = null;
 let dragStart = null;
 let dragCurrent = null;
 
-canvas.addEventListener('pointerdown', e => {
-  const mx = e.clientX, my = e.clientY;
+function getPointerPos(e) {
+  if (e.touches && e.touches.length > 0) return { x: e.touches[0].clientX, y: e.touches[0].clientY };
+  if (e.changedTouches && e.changedTouches.length > 0) return { x: e.changedTouches[0].clientX, y: e.changedTouches[0].clientY };
+  return { x: e.clientX, y: e.clientY };
+}
+
+function onDown(e) {
+  e.preventDefault();
+  const { x: mx, y: my } = getPointerPos(e);
+  // Larger hit area on touch devices
+  const isTouch = e.type === 'touchstart';
+  const hitPad = isTouch ? 12 : 0;
   for (let i = marbles.length - 1; i >= 0; i--) {
     const b = marbles[i];
     const dx = mx - b.x, dy = my - b.y;
-    if (dx * dx + dy * dy < b.r * b.r) {
+    const hitR = b.r + hitPad;
+    if (dx * dx + dy * dy < hitR * hitR) {
       dragging = b;
       dragStart = { x: mx, y: my };
       dragCurrent = { x: mx, y: my };
@@ -463,20 +501,48 @@ canvas.addEventListener('pointerdown', e => {
       break;
     }
   }
-});
+}
 
-canvas.addEventListener('pointermove', e => {
-  if (dragging) dragCurrent = { x: e.clientX, y: e.clientY };
-});
+function onMove(e) {
+  if (dragging) {
+    e.preventDefault();
+    dragCurrent = getPointerPos(e);
+  }
+}
 
-canvas.addEventListener('pointerup', e => {
+function onUp(e) {
   if (dragging && dragStart) {
-    const dx = dragStart.x - e.clientX;
-    const dy = dragStart.y - e.clientY;
+    const { x, y } = getPointerPos(e);
+    const dx = dragStart.x - x;
+    const dy = dragStart.y - y;
     dragging.vx = dx * 0.25;
     dragging.vy = dy * 0.25;
   }
   dragging = null; dragStart = null; dragCurrent = null;
+}
+
+canvas.addEventListener('pointerdown', onDown, { passive: false });
+canvas.addEventListener('pointermove', onMove, { passive: false });
+canvas.addEventListener('pointerup', onUp);
+canvas.addEventListener('pointercancel', onUp);
+// Touch fallbacks for older mobile browsers
+canvas.addEventListener('touchstart', onDown, { passive: false });
+canvas.addEventListener('touchmove', onMove, { passive: false });
+canvas.addEventListener('touchend', onUp);
+canvas.addEventListener('touchcancel', onUp);
+
+// ─── Refresh button ───
+document.getElementById('refreshBtn').addEventListener('click', () => {
+  generateBackground();
+  generateRingPattern();
+  initMarbles();
+  drawGraffitiTitle();
+  positionUI();
+  // Re-trigger info animation
+  const info = document.getElementById('info');
+  info.style.animation = 'none';
+  info.offsetHeight; // reflow
+  info.style.animation = '';
 });
 
 // ─── Physics ───
